--- a/static/backbone/taxonium.html
+++ b/static/backbone/taxonium.html
@@ -22,7 +22,7 @@
       display: flex; /* For centering the loading text */
       justify-content: center;
       align-items: center;
-      background-color: #f0f0f0;
+      background-color: #fafafa;
       color: #333;
     }
 
