--- a/static/backbone/taxonium.html
+++ b/static/backbone/taxonium.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Insect tree</title>
+  <title>Insect tree with placements</title>
   <style>
     /* Full viewport coverage */
     html, body {
